Fix spacing in content view tabs

--- a/src/intranett.theme/intranett/theme/skins/intranett_theme_styles/main.scss
+++ b/src/intranett.theme/intranett/theme/skins/intranett_theme_styles/main.scss
@@ -804,7 +804,7 @@ dd.image-caption {
     z-index: 3;
     border-left: 1px solid #ccc;
     border-right: 1px solid #ccc;
-    margin-right: -1px;
+    margin-right: -4px;
     text-decoration: none;
     background-color: transparent;
     color: $fontcolor;
